Arreglar compilacion de informe.tex

--- a/informe/informe.tex
+++ b/informe/informe.tex
@@ -14,10 +14,10 @@
 \grupo{Grupo ``Nombre de grupo''}
 \titulo{Trabajo Práctico X}
 
-\integrante{Apellido, Nombres}{N° LU}{email@example.com}
-\integrante{Apellido, Nombres}{N° LU}{email@example.com}
-\integrante{Apellido, Nombres}{N° LU}{email@example.com}
-\integrante{Apellido, Nombres}{N° LU}{email@example.com}
+\integrante{Apellido, Nombres}{Nro LU}{email@example.com}
+\integrante{Apellido, Nombres}{Nro LU}{email@example.com}
+\integrante{Apellido, Nombres}{Nro LU}{email@example.com}
+\integrante{Apellido, Nombres}{Nro LU}{email@example.com}
 
 \maketitle
 
